Refatoração 9: Refinando classe 'ChessMatch'